02-production-validation/clusterpolicy/allowed-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-registries
spec:
  validationFailureAction: Audit

  rules:
    - name: validate-registries
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Only approved registries are allowed."

        pattern:
          spec:
            containers:
              - image: "registry.company.com/* | ghcr.io/company/*"
