02-production-validation/clusterpolicy/disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
spec:
  validationFailureAction: Audit

  rules:
    - name: privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Privilege escalation is not allowed."

        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
