02-production-validation/clusterpolicy/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Audit

  rules:
    - name: check-labels
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "app and owner labels are required."

        pattern:
          metadata:
            labels:
              app: "?*"
              owner: "?*"
