02-production-validation/clusterpolicy/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Audit

  rules:
    - name: validate-resources
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "CPU and memory requests/limits are required."

        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
