02-production-validation/clusterpolicy/verify-image-signatures.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signatures

spec:
  validationFailureAction: Audit
  background: false

  webhookTimeoutSeconds: 30

  rules:
    - name: verify-signatures

      match:
        any:
          - resources:
              kinds:
                - Pod

      verifyImages:
        - imageReferences:
            - "harbor.example.com/*"

          mutateDigest: false
          required: true
          verifyDigest: true

          attestors:
            - count: 1

              entries:
                - keys:
                    secret:
                      name: cosign-pub-key
                      namespace: kyverno
